--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "start": "cross-env NODE_ENV=production webpack-dev-server --open --hot"
+    "start": "npm run build && cross-env NODE_ENV=production webpack-dev-server --open --hot"
   },
   "dependencies": {
     "vue": "^2.5.11",
